# chibi-lisp

./: .gitignore  CMakeLists.txt  readme.md
examples/: countdown_30s.lisp  countdown_30s_clean.lisp  countdown_dotime.lisp  countdown_loop.lisp  ramen_timer.lisp  ramen_timer_advanced.lisp  ramen_timer_demo.lisp  ramen_timer_interactive.lisp  ramen_timer_production.lisp
src/: chibi_lisp.h  env.c  env.h  eval.c  eval.h  gc.c  gc.h  hashmap.c  hashmap.h  heap.c  heap.h  helper.c  helper.h  lisp_heap.c  lisp_heap.h  main.c  object.c  object.h  object_pool.c  object_pool.h  parser.c  parser.h  primitive.c  primitive.h  repl.c  tokenizer.c  tokenizer.h  value.c  value.h
test/: test_boolean.c  test_env.c  test_hashmap.c  test_heap.c  test_lexer.c  test_lisp_heap.c  test_lisp_heap_extended.c  test_main.c  test_object_system.c  test_parser.c  test_simple_parser.c  test_spec.yaml  test_tokenizer.c
